--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     },
     "dependencies": {
         "express": "3.0.4",
-        "jade": "*"
+        "jade": "*",
+        "connect-redis" : "latest"
     },
     "devDependencies": {
         "jshint": "*"
