--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "start": "node app"
     },
     "dependencies": {
-        "express": "3.0.4",
+        "express": "3.1.0",
         "jade": "*",
-        "connect-redis" : "latest"
+        "connect-redis": "latest",
+        "sockjs": "*",
+        "rbytes": "*"
     },
     "devDependencies": {
         "jshint": "*"
