--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "bodega": "addons.makeplaylive.com",
+    "bodega": "78.47.60.181",
     "port": 3000,
     "api": "/bodega/v1/json/",
     "network" : "MakePlayLive"
