--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "bodega": "78.47.60.181",
+    "domain": "addons.makeplaylive.com",
     "port": 3000,
     "api": "/bodega/v1/json/",
     "network" : "MakePlayLive"
