use validator package to validate emails

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "jade": "*",
         "connect-redis": "latest",
         "sockjs": "*",
-        "rbytes": "*"
+        "rbytes": "*",
+        "validator": "*"
     },
     "devDependencies": {
         "jshint": "*"
