add async as a dependency

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "connect-redis": "latest",
         "sockjs": "*",
         "rbytes": "*",
-        "validator": "*"
+        "validator": "*",
+        "async": "latest"
     },
     "devDependencies": {
         "jshint": "*"
