allow configuration of the port and host; divide config into server and client
also adds a section for redis config

this is all necessary for production usage

--- a/config.json
+++ b/config.json
@@ -1,7 +1,17 @@
 {
-    "bodega": "78.47.60.181",
-    "domain": "addons.makeplaylive.com",
-    "port": 3000,
-    "api": "/bodega/v1/json/",
-    "network" : "MakePlayLive"
+    "server": {
+        "hostname": "addons.makeplaylive.com",
+        "port": 3000,
+        "api": "/bodega/v1/json/",
+        "network": "MakePlayLive",
+        "store": "VIVALDI-1"
+    },
+    "client": {
+        "port": 3001,
+        "hostname": "localhost",
+        "downloadTarget": "browser"
+    },
+    "redis" : {
+        "host" : "localhost"
+    }
 }
