Load the participant information properly. Also we now able to change our participant information.
Also fix an issue with json/* route. 'POST' requests are now working.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "jade": "*",
         "connect-redis": "latest",
         "sockjs": "*",
-        "validator": "*"
+        "validator": "*",
+        "request": "latest"
     },
     "devDependencies": {
         "jshint": "*"
